Fixed side context by adjusting padding to align
made side have 0 padding and top/bottom added to give space

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ Developer @GA in NYC
 /*******************************************/
 
 body {
-     color: #606161;
+     background-color: #f0efef;
      font-size: 12px;
      line-height: 1.4;
      font-family: Helvetica, Arial, sans-serif;
@@ -105,7 +105,7 @@ section {
   border-bottom: 2px solid black;
   width: 100%;
   padding: 50px 0;
-  margin-left: 0 50px ;
+  margin-left: 5px 50px ;
 }
 aside {
   width: 100%;
@@ -127,7 +127,7 @@ h2{
 h3 {
   font-weight: 800;
   font-size: 20px;
-  padding: 10px;
+  padding: 20px 0;
   color: #033048;
   word-spacing: -2px;
   text-align: justify;
